panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__preprocessor__include__test_error_empty_include_directive.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/preprocessor/include/test_error_empty_include_directive.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `#include` directive does not include anything
   ╭─[panko/tests/cases/preprocessor/include/test_error_empty_include_directive.c:1:1]
   │
 1 │ #include
   │ ────┬───  
   │     ╰───── expected either `"filename"` or `<filename>`
───╯
